# project-euler

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
benches/: euler-bench.rs
euler-exploratory-scripts/: hello.py  pyproject.toml
euler-exploratory-scripts/problems/: p208.py  p209.py
notes/: Problem208.md
src/: lib.rs  main.rs
src/problems/: benchmarks201.txt  benchmarks202.txt  mod.rs  p201.rs  p202.rs  p208.rs  p209.rs  p60.rs
src/utils/: gcd.rs  mod.rs  sieve.rs
