[package]
name = "euler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
itertools = "0.13.0"
rayon = "1.10"
quickcheck = "1.0.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "euler-bench"
harness = false
